--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dateformat": "^3.0.3",
     "discord-welcome": "^2.0.2",
     "discord.js": "^12.3.1",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.0"
-  },
-  "devDependencies": {}
+  }
 }
