audit fix dependancies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord-api-types": "^0.25.2",
     "discord-welcome": "^3.0.3",
     "discord.js": "^13.3.1",
+    "dotenv": "^16.0.0",
     "node-fetch": "^2.6.1",
     "openai-api": "^1.2.1",
     "request": "^2.88.0"
