--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.0",
     "node-fetch": "^2.6.1",
-    "openai": "^3.2.1",
-    "request": "^2.88.0"
+    "openai": "^3.2.1"
   }
 }
