--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ CLIENT_ID="YOUR_APPLICATION_ID"
 GUILD_ID="DISCORD_SERVER_ID"
 BOT_TOKEN="YOUR_BOT_TOKEN"
 OPEN_AI_KEY="OPENAI_API_KEYs"
+PROMPT_ESCA="PROMPT FOR ESCA"
