--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "escabot",
   "type": "module",
-  "version": "2.2",
+  "version": "2.3",
   "description": "useless piece of shit",
   "main": "src/esca.js",
   "engines": {
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "format": "prettier -w src",
-    "esca": "node src/esca.js"
+    "esca": "node src/esca.js",
+    "deploy-cmds": "node src/deployCommands.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +37,5 @@
   "devDependencies": {
     "prettier": "^3.1.0"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.1"
 }
