--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "useless piece of shit",
   "main": "src/esca.js",
   "engines": {
-    "node": "21.5.0"
+    "node": "23.7.0"
   },
   "scripts": {
     "format": "prettier -w src",
@@ -25,6 +25,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@mistralai/mistralai": "^1.5.0",
     "dateformat": "^3.0.3",
     "discord-api-types": "^0.37.37",
     "discord-welcome": "^3.0.3",
@@ -32,7 +33,8 @@
     "dotenv": "^16.0.0",
     "env-var": "^7.4.1",
     "node-fetch": "^2.6.1",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "prettier": "^3.1.0"
