--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "escabot",
   "type": "module",
-  "version": "2.3",
+  "version": "2.4",
   "description": "useless piece of shit",
   "main": "src/esca.js",
   "engines": {
-    "node": "25.0.0"
+    "node": "25.6.0"
   },
   "scripts": {
     "format": "prettier -w src",
@@ -25,6 +25,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.5.0",
     "dateformat": "^3.0.3",
     "discord-api-types": "^0.37.37",
