--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@google/genai": "^1.40.0",
     "@google/generative-ai": "^0.24.1",
     "@mistralai/mistralai": "^1.5.0",
     "dateformat": "^3.0.3",
