--- a/package.json
+++ b/package.json
@@ -23,19 +23,17 @@
   },
   "homepage": "https://github.com/Enigmind/Escabot#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.9.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/builders": "^1.13.1",
+    "@discordjs/rest": "^2.6.0",
     "@google/genai": "^1.40.0",
     "@google/generative-ai": "^0.24.1",
-    "@mistralai/mistralai": "^1.5.0",
-    "dateformat": "^3.0.3",
-    "discord-api-types": "^0.37.37",
+    "dateformat": "^5.0.3",
+    "discord-api-types": "^0.38.38",
     "discord-welcome": "^3.0.3",
-    "discord.js": "^13.8.0",
+    "discord.js": "^14.25.1",
     "dotenv": "^16.0.0",
     "env-var": "^7.4.1",
     "node-fetch": "^2.6.1",
-    "openai": "^4.20.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
